Creación de los archivos HTML para las páginas principales: - index.html - iniciarsesion.html - registro.html - registroexitoso.html
Se incluye también la estructura de carpetas de Recursos con:
- Hojas de estilo CSS
- Iconos
- Imágenes

--- a/RecyRoute/RecyRoute.csproj
+++ b/RecyRoute/RecyRoute.csproj
@@ -7,12 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Frontend\Pagina\**" />
+    <Content Remove="Frontend\Pagina\**" />
+    <EmbeddedResource Remove="Frontend\Pagina\**" />
+    <None Remove="Frontend\Pagina\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Frontend\" />
     <Folder Include="Backend\" />
+    <Folder Include="Controllers\" />
     <Folder Include="Modelos\" />
     <Folder Include="Contexto\" />
   </ItemGroup>
