--- a/RecyRoute/appsettings.json
+++ b/RecyRoute/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnection": "Server=your_server;Database=RecyRouteDB;User Id=your_username;Password=your_password;TrustServerCertificate=true"
+  },
   "AllowedHosts": "*"
 }
+
+
