--- a/RecyRoute/appsettings.json
+++ b/RecyRoute/appsettings.json
@@ -5,18 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SqlConnection": "Server=your_server;Database=RecyRouteDB;User Id=your_username;Password=your_password;TrustServerCertificate=true"
+  "ConnectionStrings": { //Configuración de la cadena de conexión a la base de datos SQL Server
+    "SQLConnectionStrings": "Server=your_server;Database=RecyRouteDB;User Id=your_username;Password=your_password;TrustServerCertificate=true"
   },
   "AllowedHosts": "*",
-  "Jwt": {
+  "Jwt": {//Configuración del JWT para autenticación y autorización
     "Key": "Grupo#-Perron.12345@.",
     "Issuer": "https://localhost:7255/",
     "Audience": "https://localhost:7255/",
-    "subject": "BaseWebApiSubject",
-    "
+    "subject": "BaseWebApiSubject"
+    
   }
 }
-
 
