--- a/RecyRoute/RecyRoute.csproj
+++ b/RecyRoute/RecyRoute.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Backend\**" />
     <Compile Remove="Frontend\**" />
+    <Content Remove="Backend\**" />
     <Content Remove="Frontend\**" />
+    <EmbeddedResource Remove="Backend\**" />
     <EmbeddedResource Remove="Frontend\**" />
+    <None Remove="Backend\**" />
     <None Remove="Frontend\**" />
   </ItemGroup>
 
@@ -29,10 +33,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="10.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Backend\" />
   </ItemGroup>
 
 </Project>
