--- a/RecyRoute/appsettings.json
+++ b/RecyRoute/appsettings.json
@@ -9,12 +9,11 @@
     "SQLConnectionStrings": "Server=your_server;Database=RecyRouteDB;User Id=your_username;Password=your_password;TrustServerCertificate=true"
   },
   "AllowedHosts": "*",
-  "Jwt": {//Configuración del JWT para autenticación y autorización
-    "Key": "Grupo#-Perron.12345@.",
+  "Jwt": { //Configuración del JWT para autenticación y autorización
+    "Key": "Grupo#-Serio.12345@.-$",
     "Issuer": "https://localhost:7255/",
-    "Audience": "https://localhost:7255/",
-    "subject": "BaseWebApiSubject"
-    
+    "Audience": "https://localhost:7255/"
+   
+
   }
 }
-
