--- a/RecyRoute/appsettings.json
+++ b/RecyRoute/appsettings.json
@@ -5,12 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": { //Configuración de la cadena de conexión a la base de datos SQL Server
-    "SQLConnectionStrings": "Server=your_server;Database=RecyRouteDB;User Id=your_username;Password=your_password;TrustServerCertificate=true"
-  },
+
   "AllowedHosts": "*",
-  "Jwt": { //Configuración del JWT para autenticación y autorización
-    "Key": "Grupo#-Serio.12345@.-$",
+
+  "ConnectionStrings": {
+    // Configuración de la cadena de conexión a la base de datos SQL Server
+    "SQLConnectionStrings": "Server=SERGY;Database=RecyRoute;Integrated Security=true;TrustServerCertificate=true"
+  },
+
+  "Jwt": {
+    // Configuración del JWT para autenticación y autorización
+    "Key": "Esta-Es-Una-Clave-Muy-Segura-Y-Larga-Para-JWT-2025-RecyRoute!",
     "Issuer": "https://localhost:7255/",
     "Audience": "https://localhost:7255/"
   }
