--- a/RecyRoute/appsettings.json
+++ b/RecyRoute/appsettings.json
@@ -8,15 +8,16 @@
 
   "AllowedHosts": "*",
 
+  // Configuración de la cadena de conexión a la base de datos SQL Server
   "ConnectionStrings": {
-    // Configuración de la cadena de conexión a la base de datos SQL Server
     "SQLConnectionStrings": "Server=SERGY;Database=RecyRoute;Integrated Security=true;TrustServerCertificate=true"
   },
 
+
+  // Configuración del JWT para autenticación y autorización
   "Jwt": {
-    // Configuración del JWT para autenticación y autorización
     "Key": "Esta-Es-Una-Clave-Muy-Segura-Y-Larga-Para-JWT-2025-RecyRoute!",
-    "Issuer": "https://localhost:7255/",
-    "Audience": "https://localhost:7255/"
+    "Issuer": "https://localhost:7293",
+    "Audience": "https://localhost:7293"
   }
 }
