Fronted finalizado,correcion de conexion de base de datos.

--- a/RecyRoute/appsettings.json
+++ b/RecyRoute/appsettings.json
@@ -5,16 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "AllowedHosts": "*",
-
-  // Configuración de la cadena de conexión a la base de datos SQL Server
   "ConnectionStrings": {
-    "SQLConnectionStrings": "Server=SERGY;Database=RecyRoute;Integrated Security=true;TrustServerCertificate=true"
+    "SQLConnectionStrings": "Server=SERGY;Database=RecyRoute;User Id=sa;Password=$ergy21122002;TrustServerCertificate=True"
   },
-
-
-  // Configuración del JWT para autenticación y autorización
   "Jwt": {
     "Key": "Esta-Es-Una-Clave-Muy-Segura-Y-Larga-Para-JWT-2025-RecyRoute!",
     "Issuer": "https://localhost:7293",
